# vserial

./: README.md  pyproject.toml
examples/: basic_usage.py
vserial/: __init__.py  vserial_win.py
